--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ body {
 }
 
 .mini-img img{
-    height: 300px;
-    width: 300px;
+    height: 20rem;
+    width: 20rem;
     display: none;
     filter: drop-shadow(0 0 20px rgb(80, 80, 80));
     margin: 2rem 0;
@@ -262,19 +262,20 @@ body {
     color: black;
     margin: 0 5rem;
     align-items: center;
-    justify-content: center;
-    display: flex;
+    display: block;
 }
 
 .skill-box {
-    margin: 0 0.5rem;
+    margin: 0.5rem 0.5rem;
     background-color: rgb(212, 212, 212);
     padding: 0.5rem;
+    justify-content: center;
     border-radius: 10px;
 }
 
 .skill-icons-6-grp {
     display: flex;
+    justify-content: center;
 }
 
 .skill-icons-3-grp {
