--- a/style.css
+++ b/style.css
@@ -267,8 +267,10 @@ body {
 
 .skill-box {
     margin: 0.5rem 0.5rem;
-    background-color: rgb(212, 212, 212);
+    background-color: rgb(34, 34, 34);
     padding: 0.5rem;
+    opacity: 0.9;
+    color: white;
     justify-content: center;
     border-radius: 10px;
 }
@@ -393,12 +395,14 @@ button[type='submit'] {
     padding: 0.5rem 2rem;
     font-size: 1.2rem;
     border-radius: 20px;
-    background-color: darkorange;
+    background-color: transparent;
     cursor: pointer;
+    color: white;
+    text-shadow: 3px 4px 2px black;
 }
-/* button[type='submit']:hover{
-
-} */
+button[type='submit']:hover{
+    background-color: darkorange;
+}
 
 /* ***************************************************************** */
 /* 3D social media icons */
@@ -532,4 +536,67 @@ button[type='submit'] {
 }
 .display1{
     display: block;
+}
+
+
+
+
+
+
+
+.project-container{
+    width: 85%;
+    border-radius: 10px;
+    margin: 1rem 7%;
+    background: transparent;
+    background-color: #1b1b1b;
+    font-family: 'Kanit', sans-serif;
+}
+.image-container{
+    border-radius: 10px;
+    margin: 1rem;
+    background-color: #2e2e2e;
+    box-shadow: 2px 2px 16px 1px black;
+}
+.image-container img{
+    width: 100%;
+    display: flex;
+}
+
+.project-description{
+    margin: 1rem;
+}
+.desc-content h1{
+    color: white;
+    font-size: 1.8rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    margin: 1rem 1.3rem;
+}
+.desc-content p {
+    padding: 1.2rem;
+    text-align: justify;
+    color: white;
+    border-top: 1px solid grey;
+}
+.relevant-links{
+    border-top: 1px solid grey;
+    display: flex;
+    justify-content: center;
+    padding: 1rem 1rem 0 1rem;
+}
+.relevant-links a{
+    text-transform: none;
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    font-size: 1.1rem;
+    text-shadow: 5px 4px 8px black;
+    border: 1px solid grey;
+    margin: 1rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 25px;
+}
+.relevant-links a:hover{
+    background-color: darkorange;
 }
