--- a/style.css
+++ b/style.css
@@ -48,13 +48,13 @@ body {
     position: relative;
 }
 
-.mini-img{
+.mini-img {
     justify-content: center;
     display: none;
 
 }
 
-.mini-img img{
+.mini-img img {
     height: 20rem;
     width: 20rem;
     display: none;
@@ -94,6 +94,8 @@ body {
     overflow-y: hidden;
     font-weight: 900;
     letter-spacing: 7px;
+    line-height: 4rem;
+    margin: 1rem 0;
     /* text-shadow: 1px 2px 4px grey; */
 }
 
@@ -315,8 +317,8 @@ body {
 
 .contact-form {
     color: white;
-    /* background-color: #ccc; */
     width: 50%;
+    background-color: #1b1b1b;
     /* margin: 0 3rem; */
     padding: 1rem;
     border-radius: 10px;
@@ -326,6 +328,7 @@ body {
 .contact-photo {
     padding: 2rem 2rem 2rem 0;
     width: 50%;
+    background-color: #1b1b1b;
     overflow-y: hidden !important;
 
 }
@@ -342,17 +345,19 @@ body {
 .contact-box {
     display: flex;
     /* width: 100%; */
-    background-color: #363636;
+    background-color: #1b1b1b;
     margin: 0 10%;
     margin-bottom: 4rem;
     border-radius: 10px;
     overflow-y: hidden !important;
 
 }
-.hidden{
+
+.hidden {
     display: none;
 }
-.display{
+
+.display {
     display: block;
 }
 
@@ -398,9 +403,10 @@ button[type='submit'] {
     background-color: transparent;
     cursor: pointer;
     color: white;
-    text-shadow: 3px 4px 2px black;
+    text-shadow: 3px 4px 7px black;
 }
-button[type='submit']:hover{
+
+button[type='submit']:hover {
     background-color: darkorange;
 }
 
@@ -411,7 +417,7 @@ button[type='submit']:hover{
     text-align: center;
     justify-content: center;
     /* width: 100%; */
-    background-color: #363636;
+    background-color: #1b1b1b;
     margin: 0 25%;
     margin-bottom: 2rem;
     border-radius: 10px;
@@ -439,7 +445,7 @@ button[type='submit']:hover{
     height: 3.5rem;
     margin: 0 2rem;
     transform: rotate(-30deg) skew(25deg);
-    background: #ccc;
+    background: #1b1b1b;
     overflow-y: hidden;
 }
 
@@ -457,7 +463,8 @@ button[type='submit']:hover{
     color: #fff;
     font-size: 2.5rem !important;
 }
-.leetcode-img img{
+
+.leetcode-img img {
     width: 80%;
     height: 100%;
 }
@@ -509,32 +516,37 @@ button[type='submit']:hover{
 
 
 
-.socialmediamini{
-    background-color: #363636;
+.socialmediamini {
+    background-color: #1b1b1b;
     width: fit-content;
     border-radius: 50px;
     margin: auto;
     margin-bottom: 2rem;
 }
-.socialmediamini ul{
+
+.socialmediamini ul {
     display: flex;
     width: fit-content;
     justify-content: center;
 }
-.socialmediamini ul li{
+
+.socialmediamini ul li {
     list-style: none;
     margin: 0.5rem;
     margin-bottom: 0;
     padding: 0.5rem;
 }
-.socialmediamini img{
+
+.socialmediamini img {
     height: 50px;
     width: 50px;
 }
-.hidden1{
+
+.hidden1 {
     display: none;
 }
-.display1{
+
+.display1 {
     display: block;
 }
 
@@ -544,48 +556,61 @@ button[type='submit']:hover{
 
 
 
-.project-container{
+.project-container {
     width: 85%;
     border-radius: 10px;
     margin: 1rem 7%;
+    display: flex;
     background: transparent;
     background-color: #1b1b1b;
     font-family: 'Kanit', sans-serif;
 }
-.image-container{
+
+.image-container {
+    height: fit-content;
     border-radius: 10px;
-    margin: 1rem;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    margin: auto 1rem;
+    width: 100%;
     background-color: #2e2e2e;
     box-shadow: 2px 2px 16px 1px black;
 }
-.image-container img{
+
+.image-container img {
     width: 100%;
     display: flex;
 }
 
-.project-description{
+.project-description {
     margin: 1rem;
+    width: 100%;
 }
-.desc-content h1{
+
+.desc-content h1 {
     color: white;
     font-size: 1.8rem;
     font-weight: 600;
     letter-spacing: 2px;
     margin: 1rem 1.3rem;
 }
+
 .desc-content p {
     padding: 1.2rem;
     text-align: justify;
     color: white;
     border-top: 1px solid grey;
 }
-.relevant-links{
+
+.relevant-links {
     border-top: 1px solid grey;
     display: flex;
     justify-content: center;
     padding: 1rem 1rem 0 1rem;
 }
-.relevant-links a{
+
+.relevant-links a {
     text-transform: none;
     text-decoration: none;
     color: white;
@@ -597,6 +622,29 @@ button[type='submit']:hover{
     padding: 0.5rem 1.5rem;
     border-radius: 25px;
 }
-.relevant-links a:hover{
+
+.relevant-links a:hover {
     background-color: darkorange;
+}
+
+.project-icon-container {
+    align-items: center;
+    background: hsla(0, 0%, 100%, .2);
+    border-radius: 8px;
+    display: flex;
+    -webkit-filter: drop-shadow(2px 2px 4px #1b0021);
+    filter: drop-shadow(2px 2px 4px #1b0021);
+    justify-content: space-evenly;
+    margin: 10px;
+    padding: 5px;
+    width: 95%;
+}
+
+.project-icon-container img {
+    -webkit-margin-start: 10px;
+    height: 6vmin;
+    margin-inline-start: 10px;
+    object-fit: contain;
+    width: auto;
+    border-radius: 10px;
 }
